Replace use of deprecated new URL("...")